build_alef.log
   Compiling alef-backend-php v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-php)
   Compiling alef-backend-gleam v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-gleam)
   Compiling alef-backend-dart v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-dart)
   Compiling alef-backend-kotlin v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-kotlin)
   Compiling alef-extract v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-extract)
   Compiling alef-backend-java v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-java)
   Compiling alef-backend-pyo3 v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-pyo3)
   Compiling alef-backend-go v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-go)
   Compiling alef-backend-zig v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-zig)
   Compiling alef-backend-napi v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-napi)
   Compiling alef-backend-wasm v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-wasm)
   Compiling alef-backend-swift v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-swift)
   Compiling alef-backend-ffi v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-ffi)
   Compiling alef-backend-magnus v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-magnus)
   Compiling alef-scaffold v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-scaffold)
   Compiling alef-publish v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-publish)
   Compiling alef-e2e v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-e2e)
   Compiling alef-backend-kotlin-android v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-kotlin-android)
   Compiling alef-readme v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-readme)
   Compiling alef-backend-rustler v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-rustler)
   Compiling alef-backend-csharp v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-csharp)
   Compiling alef-backend-extendr v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-extendr)
   Compiling alef-backend-jni v0.16.7 (/Users/naamanhirschfeld/workspace/kreuzberg-dev/alef/crates/alef-backend-jni)
error[E0425]: cannot find function `emit_return_marshal_with_indent` in this scope
   --> crates/alef-backend-jni/src/gen_shims.rs:598:9
    |
598 |         emit_return_marshal_with_indent(out, return_type, "    ");
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `alef-backend-jni` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
